--- a/server/templates/templateFiles/restricted.tmpl
+++ b/server/templates/templateFiles/restricted.tmpl
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restricted</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+		<meta content="{{ .CsrfSecret }}" name="csrf-token" />
 </head>
 <body>
-    <h1>Welcome to Secure Auth</h1>
-    <h3>Your secret message is : {{.SecretMessage}}</h3>
-
-    <form action="" name="logout"></form>
-    <form action="" name="deleteUser"></form>
-
-</body>
+		<h1>Welcome to the super secret area</h1>
+		<h3>Your secret message is: {{ .SecretMessage }}</h3>
+		<br><br>
+		<form name="logout" action="/logout" method="POST">
+			<input hidden name="X-CSRF-Token" value="{{ .CsrfSecret }}" />
+			<input type="submit" value="Log Out" />
+		</form>
+		<form name="deleteUser" action="/deleteUser" method="POST">
+			<input hidden name="X-CSRF-Token" value="{{ .CsrfSecret }}" />
+			<input type="submit" value="Delete User" />
+		</form>
+	</body>
 </html>
